Static implementation of user service for define routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
-<!-- Apenas testando os templates aqui, rotas serão definidas no final-->
-<app-login></app-login>
-<app-create-account></app-create-account>
-<app-schedule></app-schedule>
+<router-outlet></router-outlet>
+
