--- a/src/app/components/create-account/create-account.component.html
+++ b/src/app/components/create-account/create-account.component.html
@@ -3,12 +3,13 @@
     <p id="profile-name" class="profile-name-card"></p>
     <h2 align="center">Create Account</h2><br>
     <form class="form-signin">
-      <input type="text" id="inputName" class="form-control" placeholder="Name" required autofocus>
-      <input type="text" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-      <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Create</button>
+      <input type="text" [(ngModel)]="name" name="name" class="form-control" placeholder="Name" required autofocus>
+      <input type="text" [(ngModel)]="username" name="username" class="form-control" placeholder="Username" required autofocus>
+      <input type="password" [(ngModel)]="password" name="password" class="form-control" placeholder="Password" required>
+      <input type="password" [(ngModel)]="cpassword" name="cpassword" class="form-control" placeholder="Confirm Password" required>
+      <button class="btn btn-lg btn-primary btn-block btn-signin" (click)="createUser()" type="submit">Create</button>
     </form><!-- /form -->
-    <a href="#" class="create-account">
+    <a href="login" class="create-account">
       Already have an account? Sign in
     </a>
   </div><!-- /card-container -->
