--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,16 +3,11 @@
     <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
     <p id="profile-name" class="profile-name-card"></p>
     <form class="form-signin">
-      <input type="text" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-      <div id="remember" class="checkbox">
-        <label>
-          <input type="checkbox" value="remember-me"> Remember me
-        </label>
-      </div>
-      <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
+      <input type="text" [(ngModel)]="username" name="username" class="form-control" placeholder="Username" required autofocus>
+      <input type="password" [(ngModel)]="password" name="password" class="form-control" placeholder="Password" required>
+      <button class="btn btn-lg btn-primary btn-block btn-signin" (click)="login()" type="submit">Sign in</button>
     </form><!-- /form -->
-    <a href="#" class="create-account">
+    <a href="/createaccount" class="create-account">
       Create Account
     </a>
   </div><!-- /card-container -->
