--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="card card-container">
-    <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
+    <h2 align="center">Login</h2>
     <p id="profile-name" class="profile-name-card"></p>
     <form class="form-signin">
       <input type="text" [(ngModel)]="username" name="username" class="form-control" placeholder="Username" required autofocus>
