A lot o things, seriously, a lot

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -4,9 +4,12 @@ body, html {
   background-image: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));
 }
 
+.container {
+  padding-top: 5%;
+}
 .card-container.card {
   max-width: 350px;
-  padding: 40px 40px;
+  padding: 30px 30px;
 }
 
 .btn {
@@ -134,3 +137,4 @@ body, html {
 .create-account:focus{
   color: rgb(12, 97, 33);
 }
+
