--- a/src/app/components/create-account/create-account.component.html
+++ b/src/app/components/create-account/create-account.component.html
@@ -2,12 +2,18 @@
   <div class="card card-container">
     <p id="profile-name" class="profile-name-card"></p>
     <h2 align="center">Create Account</h2><br>
-    <form class="form-signin">
-      <input type="text" [(ngModel)]="name" name="name" class="form-control" placeholder="Name" required autofocus>
-      <input type="text" [(ngModel)]="username" name="username" class="form-control" placeholder="Username" required autofocus>
-      <input type="password" [(ngModel)]="password" name="password" class="form-control" placeholder="Password" required>
-      <input type="password" [(ngModel)]="cpassword" name="cpassword" class="form-control" placeholder="Confirm Password" required>
-      <button class="btn btn-lg btn-primary btn-block btn-signin" (click)="createUser()" type="submit">Create</button>
+    <form (submit)="createUser($event)" class="form-signin">
+      <h4>Account Informations:</h4>
+      <input type="text" class="form-control" placeholder="Name" required autofocus>
+      <input type="text" class="form-control" placeholder="Username" required autofocus>
+      <input type="password" class="form-control" placeholder="Password" required>
+      <input type="password" class="form-control" placeholder="Confirm Password" required>
+      <br>
+      <h4>Personal Informations:</h4>
+      <input type="text" class="form-control" placeholder="Job/Occupation">
+      <textarea class="form-control" rows="5" placeholder="Tell us something about you..."></textarea>
+      <br>
+      <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Create</button>
     </form><!-- /form -->
     <a href="login" class="create-account">
       Already have an account? Sign in
