--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,22 +1,23 @@
+<app-header></app-header>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
 <div class="container" style="margin-top: 20px; margin-bottom: 20px;">
   <div class="row panel">
     <div class="col-md-4 bg_blur ">
-      <a href="#" class="follow_btn hidden-xs">Logout</a>
+      <a (click)="logout()" class="follow_btn hidden-xs">Logout</a>
     </div>
     <div class="col-md-8  col-xs-12">
       <img src="http://lorempixel.com/output/people-q-c-100-100-1.jpg" class="img-thumbnail picture hidden-xs" />
       <img src="http://lorempixel.com/output/people-q-c-100-100-1.jpg" class="img-thumbnail visible-xs picture_mob" />
       <div class="header">
-        <h1>Lorem Ipsum</h1>
-        <h4>Web Developer</h4>
-        <span>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
-"There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."</span>
+        <h1>{{name}}</h1>
+        <h4>{{job}}</h4>
+        <p>{{about}}</p>
       </div>
     </div>
   </div>
 </div>
 <br><br>
 <app-schedule></app-schedule>
+<app-footer></app-footer>
