--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 .centerImg {
-  padding-left: 30%;
-  padding-top: 2%;
+  width: 100%;
+  height: 240px;
+}
+
+body {
+  background-color: aliceblue;
 }
