--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -43,30 +43,30 @@ body {
   background-size: cover;
 }
 
-.follow_btn {
+.logout_btn {
   text-decoration: none;
   position: absolute;
   left: 35%;
   top: 42.5%;
   width: 35%;
   height: 15%;
-  background-color: #007FBE;
+  background-color: #757c98;
   padding: 10px;
   padding-top: 6px;
   color: #fff;
   text-align: center;
   font-size: 20px;
-  border: 4px solid #007FBE;
+  border: 4px solid rgba(45, 49, 78, 0.8);
 }
 
-.follow_btn:hover {
+.logout_btn:hover {
   text-decoration: none;
   position: absolute;
   left: 35%;
   top: 42.5%;
   width: 35%;
   height: 15%;
-  background-color: #007FBE;
+  background-color: #757c98;
   padding: 10px;
   padding-top: 6px;
   color: #fff;
