--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,11 +1,10 @@
-<app-header></app-header>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
 <div class="container" style="margin-top: 20px; margin-bottom: 20px;">
   <div class="row panel">
     <div class="col-md-4 bg_blur ">
-      <a (click)="logout()" class="follow_btn hidden-xs">Logout</a>
+      <a (click)="logout()" class="logout_btn hidden-xs">Logout</a>
     </div>
     <div class="col-md-8  col-xs-12">
       <img src="https://media1.popsugar-assets.com/files/thumbor/31rfzmwwe01pUOTNGo5cmhL12M0/fit-in/1024x1024/filters:format_auto-!!-:strip_icc-!!-/2013/07/29/916/n/1922243/215118c963d5f483_shades/i/Pictures-Dogs-Wearing-Sunglasses.jpg" class="img-thumbnail picture hidden-xs" />
