--- a/src/styles.css
+++ b/src/styles.css
@@ -5,5 +5,12 @@
 }
 
 body {
-  background-color: aliceblue;
+  background-image: url(assets/imgs/bg.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  /* Set a background color that will be displayed
+     while the background image is loading */
+  background-color: #464646;
 }
