Loading tasks from backand and static implementation of Create Tasks

--- a/src/app/components/create-account/create-account.component.html
+++ b/src/app/components/create-account/create-account.component.html
@@ -19,5 +19,5 @@
       Already have an account? Sign in
     </a>
   </div><!-- /card-container -->
-</div><!-- /container -->
+</div><br><br><br><br><br><br><!-- /container -->
 
