--- a/src/app/components/schedule/schedule.component.css
+++ b/src/app/components/schedule/schedule.component.css
@@ -5,3 +5,8 @@
 .tg .tg-yw4l{vertical-align:top}
 .tg .tg-gwj7{font-weight:bold;font-size:20px;font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif !important;;text-align:center;vertical-align:top}
 @media screen and (max-width: 767px) {.tg {width: auto !important;}.tg col {width: auto !important;}.tg-wrap {overflow-x: auto;-webkit-overflow-scrolling: touch;margin: auto 0px;}}
+
+.btn-primary {
+  background: #727C95;
+  border-color: #0d1652;
+}
