--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <div class="tg-wrap"><table class="tg" style="undefined;table-layout: fixed; width: 1069px">
   <div>
     <button class="btn btn-primary" data-toggle="modal" data-target="#modalCenter">
@@ -23,59 +24,304 @@
   </tr>
   <tr>
     <td class="tg-yw4l">8:00h ~ 10:00h</td>
-    <td class="tg-yw4l">{{tasks[0].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[1].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[2].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[3].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[4].taskName}}</td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[0].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[0].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[1].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[1].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[2].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[2].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[3].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[3].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[4].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[4].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
   </tr>
   <tr>
     <td class="tg-yw4l">10:00h ~ 12:00h</td>
-    <td class="tg-yw4l">{{tasks[5].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[6].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[7].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[8].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[9].taskName}}</td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[5].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[5].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[6].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[6].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[7].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[7].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[8].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[8].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[9].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[9].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
   </tr>
   <tr>
     <td class="tg-yw4l">12:00h ~ 14:00h</td>
-    <td class="tg-yw4l">{{tasks[10].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[11].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[12].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[13].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[14].taskName}}</td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[10].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[10].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[11].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[11].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[12].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[12].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[13].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[13].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[14].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[14].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
   </tr>
   <tr>
     <td class="tg-yw4l">14:00h ~ 16:00h</td>
-    <td class="tg-yw4l">{{tasks[15].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[16].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[17].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[18].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[19].taskName}}</td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[15].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[15].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[16].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[16].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[17].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[17].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[18].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[18].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[19].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[19].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
   </tr>
   <tr>
     <td class="tg-yw4l">16:00h ~ 18:00h</td>
-    <td class="tg-yw4l">{{tasks[0].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[0].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[0].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[0].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[0].taskName}}</td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[20].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[20].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[21].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[21].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[22].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[22].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[23].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[23].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[24].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[24].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
   </tr>
   <tr>
     <td class="tg-yw4l">18:00h ~ 20:00h</td>
-    <td class="tg-yw4l">{{tasks[0].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[0].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[0].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[0].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[0].taskName}}</td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[25].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[25].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[26].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[26].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[27].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[27].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[28].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[28].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[29].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[29].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
   </tr>
   <tr>
     <td class="tg-yw4l">20:00h ~ 22:00h</td>
-    <td class="tg-yw4l">{{tasks[0].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[0].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[0].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[0].taskName}}</td>
-    <td class="tg-yw4l">{{tasks[0].taskName}}</td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[30].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[30].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[31].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[31].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[32].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[32].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[33].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[33].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
+    <td class="tg-yw4l">
+      <div class="card text-white mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{tasks[34].taskName}}</div>
+        <div class="card-body">
+          <p class="card-text">{{tasks[34].taskDescription}}</p>
+        </div>
+      </div>
+    </td>
   </tr>
 </table></div>
 
@@ -92,20 +338,20 @@
         </button>
       </div>
       <div class="modal-body">
-        <form>
-          <input type="text" placeholder="Task Name" class="form-control" ><br>
-          <textarea placeholder="Task Description" class="form-control"></textarea><br>
-          <select class="form-control">
+        <form (submit)="addTask()">
+          <input type="text" placeholder="Task Name" class="form-control" [(ngModel)]="newTaskName" name="newTaskName" required><br>
+          <textarea placeholder="Task Description" class="form-control" [(ngModel)]="newTaskDescription" name="newTaskDescription"></textarea><br>
+          <select class="form-control" [(ngModel)]="newTaskDay" name="newTaskDay">
             <option *ngFor="let day of days">{{day}}</option>
           </select><br>
-          <select class="form-control">
+          <select class="form-control" [(ngModel)]="newTaskHour" name="newTaskHour">
             <option *ngFor="let hour of hours">{{hour}}</option>
           </select><br>
         </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Create</button>
+        <button type="button" class="btn btn-primary" (click)="addTask()" data-dismiss="modal">Create</button>
       </div>
     </div>
   </div>
