--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -38,9 +38,9 @@ body {
 
 .bg_blur
 {
-  background-image:url('http://data2.whicdn.com/images/139218968/large.jpg');
   height: 300px;
   background-size: cover;
+  color: #ffffff;
 }
 
 .logout_btn {
@@ -53,7 +53,7 @@ body {
   background-color: #757c98;
   padding: 10px;
   padding-top: 6px;
-  color: #fff;
+  color: #ffffff;
   text-align: center;
   font-size: 20px;
   border: 4px solid rgba(45, 49, 78, 0.8);
@@ -69,7 +69,7 @@ body {
   background-color: #757c98;
   padding: 10px;
   padding-top: 6px;
-  color: #fff;
+  color: #ffffff;
   text-align: center;
   font-size: 20px;
   border: 4px solid rgba(255, 255, 255, 0.8);
