--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -3,11 +3,11 @@
 <div class="container" style="margin-top: 20px; margin-bottom: 20px;">
   <div class="row panel">
     <div class="col-md-4 bg_blur ">
-      <a (click)="logout()" class="logout_btn hidden-xs">Logout</a>
+      <a (click)="logout()" class="logout_btn">Logout</a>
     </div>
     <div class="col-md-8  col-xs-12">
-      <img src="https://media1.popsugar-assets.com/files/thumbor/31rfzmwwe01pUOTNGo5cmhL12M0/fit-in/1024x1024/filters:format_auto-!!-:strip_icc-!!-/2013/07/29/916/n/1922243/215118c963d5f483_shades/i/Pictures-Dogs-Wearing-Sunglasses.jpg" class="img-thumbnail picture hidden-xs" />
-      <img src="https://media1.popsugar-assets.com/files/thumbor/31rfzmwwe01pUOTNGo5cmhL12M0/fit-in/1024x1024/filters:format_auto-!!-:strip_icc-!!-/2013/07/29/916/n/1922243/215118c963d5f483_shades/i/Pictures-Dogs-Wearing-Sunglasses.jpg" class="img-thumbnail visible-xs picture_mob" />
+      <img src="https://picsum.photos/200/?random" class="img-thumbnail picture hidden-xs" />
+      <img src="https://picsum.photos/200/?random" class="img-thumbnail visible-xs picture_mob" />
       <div class="header">
         <h1>{{name}}</h1>
         <h4>{{job}}</h4>
